[gd_scene load_steps=26 format=2]

[ext_resource path="res://Falas.gd" type="Script" id=1]
[ext_resource path="res://frango.png" type="Texture" id=2]
[ext_resource path="res://queijo.png" type="Texture" id=3]
[ext_resource path="res://Image_from_iOS__5_-removebg-preview-3.png" type="Texture" id=4]
[ext_resource path="res://cogumelo.png" type="Texture" id=5]
[ext_resource path="res://setinha_voltar.png" type="Texture" id=6]
[ext_resource path="res://Action RPG Resources/Player/caradoBTG.png" type="Texture" id=7]
[ext_resource path="res://Fontes/minecraftia/Minecraftia-Regular.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Action RPG Resources/Player/secretaria.png" type="Texture" id=9]
[ext_resource path="res://Action RPG Resources/Player/amandinha.png" type="Texture" id=10]
[ext_resource path="res://professora.png" type="Texture" id=11]
[ext_resource path="res://Action RPG Resources/Player/japinha.png" type="Texture" id=12]

[sub_resource type="DynamicFont" id=13]
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=30]
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=31]
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=21]
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=32]
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=16]
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=17]
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=18]
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=34]
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=25]
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=33]
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=35]
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=15]
font_data = ExtResource( 8 )

[node name="Falas" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="GuilhermeFalas" type="Sprite" parent="."]
visible = false
position = Vector2( 76, 477 )
scale = Vector2( 1.12958, 1.12958 )
texture = ExtResource( 7 )

[node name="FundoFala" type="ColorRect" parent="GuilhermeFalas"]
modulate = Color( 1, 1, 1, 0.301961 )
show_behind_parent = true
margin_left = -4.67627
margin_top = -68.0155
margin_right = 839.324
margin_bottom = 104.984
color = Color( 0.152941, 0.992157, 1, 0.537255 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FundoNome" type="ColorRect" parent="GuilhermeFalas"]
margin_left = -66.6763
margin_top = 71.9845
margin_right = 73.3237
margin_bottom = 104.984
color = Color( 0, 0.243137, 0.705882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GuilhermeFalas"]
margin_left = -61.8273
margin_top = 77.5188
margin_right = 6.17273
margin_bottom = 91.5189
rect_scale = Vector2( 1.91066, 1.91066 )
text = "Guilherme"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FalaGuilherme" type="RichTextLabel" parent="GuilhermeFalas"]
margin_left = 80.0
margin_top = -68.0
margin_right = 427.0
margin_bottom = 42.0
rect_scale = Vector2( 1.55138, 1.55138 )
custom_fonts/normal_font = SubResource( 13 )
text = "Olá, eu sou   Guilherme, o banqueiro do BeTeJóia.  
  Prazer em te conhecer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GuiFalasButton" type="Button" parent="GuilhermeFalas"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -65.6763
margin_top = -68.0155
margin_right = 843.324
margin_bottom = 106.984
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PagarBoleto" type="Button" parent="GuilhermeFalas"]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_left = 620.534
margin_top = -52.9009
margin_right = 712.534
margin_bottom = -29.9007
rect_scale = Vector2( 1.80497, 1.80497 )
text = "Pagar Boleto"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sprite_botao_boleto" type="Sprite" parent="GuilhermeFalas"]
visible = false
position = Vector2( 713.54, -29.2145 )
scale = Vector2( 0.529418, 0.406812 )
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="GuilhermeFalas/sprite_botao_boleto"]
modulate = Color( 0, 0, 0, 1 )
margin_left = -135.977
margin_top = -34.8184
margin_right = -9.97668
margin_bottom = -9.81836
rect_scale = Vector2( 2.12544, 2.61053 )
custom_fonts/font = SubResource( 30 )
text = "Pagar boleto"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SairCvsaGui" type="TextureButton" parent="GuilhermeFalas"]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_left = 639.0
margin_top = 48.0
margin_right = 716.0
margin_bottom = 69.0
rect_scale = Vector2( 1.80497, 1.80497 )

[node name="sprite_atemais_gui" type="Sprite" parent="GuilhermeFalas"]
visible = false
position = Vector2( 714.425, 66.3963 )
scale = Vector2( 0.525638, 0.403095 )
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="GuilhermeFalas/sprite_atemais_gui"]
modulate = Color( 0, 0, 0, 1 )
margin_left = -87.5791
margin_top = -32.9431
margin_right = -6.5791
margin_bottom = -6.94312
rect_scale = Vector2( 2.09587, 2.48512 )
custom_fonts/font = SubResource( 31 )
text = "Até mais"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SecretariaFalas" type="Sprite" parent="."]
visible = false
position = Vector2( 85, 480 )
scale = Vector2( 1.13, 1.13 )
texture = ExtResource( 9 )

[node name="FundoFala" type="ColorRect" parent="SecretariaFalas"]
show_behind_parent = true
margin_left = -2.0
margin_top = -72.0
margin_right = 829.0
margin_bottom = 103.0
color = Color( 0.960784, 0.529412, 0.529412, 0.537255 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FundoNome" type="ColorRect" parent="SecretariaFalas"]
margin_left = -75.7613
margin_top = 69.6064
margin_right = 67.2387
margin_bottom = 103.606
color = Color( 0.737255, 0.380392, 0.380392, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NomeSecretaria" type="Label" parent="SecretariaFalas"]
margin_left = -73.2593
margin_top = 74.0996
margin_right = -10.2593
margin_bottom = 88.0997
rect_scale = Vector2( 2.17185, 2.06876 )
text = "Secretária"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FalaSecretaria" type="RichTextLabel" parent="SecretariaFalas"]
margin_left = 80.0
margin_top = -68.0
margin_right = 427.0
margin_bottom = 42.0
rect_scale = Vector2( 1.551, 1.551 )
custom_fonts/normal_font = SubResource( 21 )
text = "Olá, eu sou Amélia, a Secretária do INEDFIBA. Prazer em conhecer você."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SecrFalasButton" type="Button" parent="SecretariaFalas"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -71.7613
margin_top = -70.3936
margin_right = 830.239
margin_bottom = 102.606
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SairCvsaSecr" type="Button" parent="SecretariaFalas"]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_left = 663.717
margin_top = 44.2478
margin_right = 732.717
margin_bottom = 66.2478
rect_scale = Vector2( 1.6842, 1.6842 )
text = "Até mais"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sprite_atemais_secretaria" type="Sprite" parent="SecretariaFalas"]
visible = false
position = Vector2( 728.319, 58.4071 )
scale = Vector2( 0.549615, 0.44677 )
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="SecretariaFalas/sprite_atemais_secretaria"]
modulate = Color( 0, 0, 0, 1 )
margin_left = -94.9696
margin_top = -33.3805
margin_right = -1.9696
margin_bottom = -2.38049
rect_scale = Vector2( 2.36585, 2.58652 )
custom_fonts/font = SubResource( 32 )
text = "Até mais"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProfessoraFalas" type="Sprite" parent="."]
visible = false
position = Vector2( 515, 340 )
scale = Vector2( 0.479781, 0.488193 )
offset = Vector2( 1853.32, -526.945 )

[node name="FundoFala" type="ColorRect" parent="ProfessoraFalas"]
margin_left = -900.0
margin_top = 133.0
margin_right = 1079.0
margin_bottom = 534.0
color = Color( 1, 0.498039, 0.498039, 0.537255 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FundoNome" type="ColorRect" parent="ProfessoraFalas"]
margin_left = -1071.0
margin_top = 455.0
margin_right = -725.0
margin_bottom = 531.0
rect_scale = Vector2( 1, 0.997385 )
color = Color( 1, 0.717647, 0.717647, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FalaProfessora" type="RichTextLabel" parent="ProfessoraFalas"]
margin_left = -716.0
margin_top = 133.0
margin_right = -321.0
margin_bottom = 247.0
rect_scale = Vector2( 3.4987, 3.4987 )
custom_fonts/normal_font = SubResource( 16 )
text = "Olá, eu me chamo Dorothy. Serei sua professora nessa jornada pela educação financeira."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NomeProfessora" type="Label" parent="ProfessoraFalas"]
modulate = Color( 0, 0, 0, 1 )
margin_left = -1018.38
margin_top = 451.667
margin_right = -925.38
margin_bottom = 476.667
rect_scale = Vector2( 2.8936, 3.48575 )
custom_fonts/font = SubResource( 17 )
text = "Dorothy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="ProfessoraFalas"]
position = Vector2( -1394.24, 453.768 )
scale = Vector2( -2.31186, 2.30117 )
texture = ExtResource( 11 )

[node name="ProfFalasButton" type="Button" parent="ProfessoraFalas"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -1067.0
margin_top = 134.0
margin_right = 1077.0
margin_bottom = 529.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IniciarAula" type="Button" parent="ProfessoraFalas"]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_left = 767.0
margin_top = 393.0
margin_right = 853.0
margin_bottom = 425.0
rect_scale = Vector2( 2.87482, 2.87482 )
custom_fonts/font = SubResource( 18 )
text = "AULA 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sprite_inicio_aula1" type="Sprite" parent="ProfessoraFalas"]
visible = false
position = Vector2( 889.99, 436.303 )
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="ProfessoraFalas/sprite_inicio_aula1"]
modulate = Color( 0, 0, 0, 1 )
margin_left = -100.046
margin_top = -36.8706
margin_right = -32.0457
margin_bottom = -12.8706
rect_scale = Vector2( 3.0235, 3.14329 )
custom_fonts/font = SubResource( 34 )
text = "AULA 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quest_1" type="LineEdit" parent="ProfessoraFalas"]
visible = false
margin_left = 687.814
margin_top = 145.434
margin_right = 761.814
margin_bottom = 172.434
rect_scale = Vector2( 5.03862, 4.73976 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SairCvsaProf" type="Button" parent="ProfessoraFalas"]
margin_right = 12.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JapinhaFalas" type="Sprite" parent="."]
position = Vector2( 398, 389 )
scale = Vector2( 0.479322, 0.479322 )

[node name="Sprite" type="Sprite" parent="JapinhaFalas"]

[node name="FundoFala" type="ColorRect" parent="JapinhaFalas/Sprite"]
margin_left = -626.0
margin_top = 30.0
margin_right = 1318.0
margin_bottom = 440.0
color = Color( 0.356863, 0.282353, 0.282353, 0.588235 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FundoNome" type="ColorRect" parent="JapinhaFalas/Sprite"]
margin_left = -831.0
margin_top = 355.0
margin_right = -487.0
margin_bottom = 432.0
color = Color( 0.403922, 0.341176, 0.341176, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FalaJapinha" type="RichTextLabel" parent="JapinhaFalas/Sprite"]
anchor_right = 36.0
anchor_bottom = 7.0
margin_left = -476.0
margin_top = 25.0001
margin_right = -167.0
margin_bottom = 133.0
rect_scale = Vector2( 3.61834, 3.61834 )
custom_fonts/normal_font = SubResource( 25 )
text = "Olá, eu sou o Lyorrei, dono do mercadinho MilGrau."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NomeJapinha" type="Label" parent="JapinhaFalas/Sprite"]
margin_left = -780.125
margin_top = 354.881
margin_right = -736.125
margin_bottom = 368.881
rect_scale = Vector2( 5.89944, 5.89944 )
text = "Lyorrei"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JapaFalasButton" type="Button" parent="JapinhaFalas/Sprite"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -835.0
margin_top = 32.0001
margin_right = 1316.0
margin_bottom = 428.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FotoJapinha" type="Sprite" parent="JapinhaFalas/Sprite"]
position = Vector2( -665.371, 182.83 )
scale = Vector2( 2.35953, 2.35953 )
texture = ExtResource( 12 )

[node name="SairCvsaJapa" type="Button" parent="JapinhaFalas/Sprite"]
visible = false
margin_left = 874.152
margin_top = 275.389
margin_right = 1005.15
margin_bottom = 320.389
rect_scale = Vector2( 2.07604, 2.07604 )
text = "Até Mais"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sprite_atemais_japinha" type="Sprite" parent="JapinhaFalas/Sprite/SairCvsaJapa"]
position = Vector2( 66.3273, 23.1132 )
scale = Vector2( 0.59257, 0.481686 )
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="JapinhaFalas/Sprite/SairCvsaJapa/sprite_atemais_japinha"]
modulate = Color( 0, 0, 0, 1 )
margin_left = -94.9696
margin_top = -33.3805
margin_right = -1.9696
margin_bottom = -2.38049
rect_scale = Vector2( 2.36585, 2.58652 )
custom_fonts/font = SubResource( 32 )
text = "Até mais"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotaoComprarComida" type="Button" parent="JapinhaFalas/Sprite"]
visible = false
anchor_right = 0.136531
anchor_bottom = 0.173469
margin_left = 857.461
margin_top = 58.4159
margin_right = 1046.32
margin_bottom = 136.242
rect_scale = Vector2( 1.8333, 1.8333 )
text = "comprar comida"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sprite_comprar_comida" type="Sprite" parent="JapinhaFalas/Sprite/BotaoComprarComida"]
position = Vector2( 91.3899, 42.0874 )
scale = Vector2( 0.774731, 0.62976 )
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="JapinhaFalas/Sprite/BotaoComprarComida/sprite_comprar_comida"]
modulate = Color( 0, 0, 0, 1 )
margin_left = -135.671
margin_top = -27.1216
margin_right = 28.3287
margin_bottom = 3.87836
rect_scale = Vector2( 1.74962, 2.0519 )
custom_fonts/font = SubResource( 33 )
text = "Comprar comida"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Comidinhas" type="Sprite" parent="JapinhaFalas"]
visible = false

[node name="fundo_branco" type="Sprite" parent="JapinhaFalas/Comidinhas"]
position = Vector2( 237.836, -64.6747 )
scale = Vector2( 5.10491, 5.10492 )
texture = ExtResource( 4 )

[node name="info_comprar_comida" type="Label" parent="JapinhaFalas/Comidinhas/fundo_branco"]
modulate = Color( 0, 0, 0, 1 )
margin_left = -126.691
margin_top = -55.5806
margin_right = 269.309
margin_bottom = -25.5806
rect_scale = Vector2( 0.643311, 0.643311 )
custom_fonts/font = SubResource( 35 )
text = "SELECIONE A COMIDA QUE DESEJA COMPRAR"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="frango(C1)" type="Sprite" parent="JapinhaFalas/Comidinhas/fundo_branco"]
position = Vector2( -97.2661, -6.53888 )
scale = Vector2( 0.256515, 0.258962 )
texture = ExtResource( 2 )

[node name="queijo(C2)" type="Sprite" parent="JapinhaFalas/Comidinhas/fundo_branco"]
position = Vector2( 92.3619, -4.08682 )
scale = Vector2( 0.244378, 0.244378 )
texture = ExtResource( 3 )

[node name="cogumelo(C3)" type="Sprite" parent="JapinhaFalas/Comidinhas/fundo_branco"]
position = Vector2( -4.90417, -4.90417 )
scale = Vector2( 0.268683, 0.268683 )
texture = ExtResource( 5 )

[node name="nomeC1" type="Label" parent="JapinhaFalas/Comidinhas/fundo_branco"]
modulate = Color( 0, 0, 0, 1 )
margin_left = -116.474
margin_top = -38.0073
margin_right = -44.474
margin_bottom = -16.0073
rect_scale = Vector2( 0.643311, 0.643311 )
custom_fonts/font = SubResource( 35 )
text = "FRANGO"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nomeC2" type="Label" parent="JapinhaFalas/Comidinhas/fundo_branco"]
modulate = Color( 0, 0, 0, 1 )
margin_left = -33.9205
margin_top = -38.0073
margin_right = 62.0795
margin_bottom = -16.0073
rect_scale = Vector2( 0.643311, 0.643311 )
custom_fonts/font = SubResource( 35 )
text = "COGUMELO"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nomeC3" type="Label" parent="JapinhaFalas/Comidinhas/fundo_branco"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 69.8844
margin_top = -37.5986
margin_right = 150.884
margin_bottom = -15.5986
rect_scale = Vector2( 0.643311, 0.643311 )
custom_fonts/font = SubResource( 35 )
text = "QUEIJO"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="infoC1" type="Label" parent="JapinhaFalas/Comidinhas/fundo_branco"]
modulate = Color( 0, 0, 0, 1 )
margin_left = -126.282
margin_top = 13.4865
margin_right = -39.2823
margin_bottom = 60.4865
rect_scale = Vector2( 0.643311, 0.643311 )
custom_fonts/font = SubResource( 35 )
text = "BT$ 5,00
+ 25% "
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="infoC2" type="Label" parent="JapinhaFalas/Comidinhas/fundo_branco"]
modulate = Color( 0, 0, 0, 1 )
margin_left = -30.651
margin_top = 13.4865
margin_right = 56.349
margin_bottom = 60.4865
rect_scale = Vector2( 0.643311, 0.643311 )
custom_fonts/font = SubResource( 35 )
text = "BT$ 9,00
+ 50% "
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="infoC3" type="Label" parent="JapinhaFalas/Comidinhas/fundo_branco"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 64.1628
margin_top = 13.0778
margin_right = 156.163
margin_bottom = 60.0778
rect_scale = Vector2( 0.643311, 0.643311 )
custom_fonts/font = SubResource( 35 )
text = "BT$ 13,00
+ 75% "
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ComprarComida1" type="Button" parent="JapinhaFalas/Comidinhas/fundo_branco"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -124.0
margin_top = -46.0
margin_right = -72.0
margin_bottom = 42.0
rect_scale = Vector2( 1.00531, 1.00531 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ComprarComida2" type="Button" parent="JapinhaFalas/Comidinhas/fundo_branco"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -37.0
margin_top = -47.0
margin_right = 29.0
margin_bottom = 45.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ComprarComida3" type="Button" parent="JapinhaFalas/Comidinhas/fundo_branco"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 63.0
margin_top = -45.0
margin_right = 128.0
margin_bottom = 44.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="JapinhaFalas/Comidinhas/fundo_branco"]
margin_left = 93.9966
margin_top = 62.1195
margin_right = 238.997
margin_bottom = 159.119
rect_scale = Vector2( 0.286047, 0.286047 )
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SofiaFalas" type="Sprite" parent="."]
visible = false
position = Vector2( 522, 334 )
scale = Vector2( 0.485002, 0.485002 )

[node name="Fundo Fala" type="ColorRect" parent="SofiaFalas"]
margin_left = -1084.0
margin_top = 138.0
margin_right = 1080.0
margin_bottom = 536.0
color = Color( 1, 0.243137, 0.243137, 0.337255 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fundo Nome" type="ColorRect" parent="SofiaFalas"]
margin_left = -1075.31
margin_top = 431.951
margin_right = -779.307
margin_bottom = 529.951
color = Color( 1, 0, 0, 0.615686 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Falas_Da_Sofia" type="RichTextLabel" parent="SofiaFalas"]
margin_left = -599.0
margin_top = 143.0
margin_right = -279.0
margin_bottom = 250.0
rect_scale = Vector2( 3.59155, 3.59155 )
custom_fonts/normal_font = SubResource( 15 )
text = "Olá, sou a Sofia, sua mestra. Chame-me de mestra."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Amandinha" type="Sprite" parent="SofiaFalas"]
position = Vector2( -1414.77, 421.198 )
scale = Vector2( -2.31984, 2.28709 )
texture = ExtResource( 10 )

[node name="Nome Sofia" type="Label" parent="SofiaFalas"]
margin_left = -1060.55
margin_top = 428.367
margin_right = -1020.55
margin_bottom = 442.367
rect_scale = Vector2( 7.96256, 7.96256 )
text = "Sofia"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SofiaFalasButton" type="Button" parent="SofiaFalas"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -1071.0
margin_top = 142.0
margin_right = 1075.0
margin_bottom = 533.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SairCvsaSofiaButton" type="Button" parent="SofiaFalas"]
margin_left = 624.1
margin_top = 360.258
margin_right = 696.1
margin_bottom = 398.258
rect_scale = Vector2( 3.81957, 3.81957 )
text = "Até Mais"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="GuilhermeFalas/GuiFalasButton" to="." method="_on_GuiFalasButton_pressed"]
[connection signal="pressed" from="GuilhermeFalas/SairCvsaGui" to="." method="_on_SairCvsaGui_pressed"]
[connection signal="pressed" from="SecretariaFalas/SecrFalasButton" to="." method="_on_SecrFalasButton_pressed"]
[connection signal="pressed" from="SecretariaFalas/SairCvsaSecr" to="." method="_on_SairCvsaSecr_pressed"]
[connection signal="pressed" from="ProfessoraFalas/ProfFalasButton" to="." method="_on_ProfFalasButton_pressed"]
[connection signal="pressed" from="ProfessoraFalas/SairCvsaProf" to="." method="_on_SairCvsaProf_pressed"]
[connection signal="pressed" from="JapinhaFalas/Sprite/JapaFalasButton" to="." method="_on_JapaFalasButton_pressed"]
[connection signal="pressed" from="JapinhaFalas/Sprite/SairCvsaJapa" to="." method="_on_SairCvsaJapa_pressed"]
[connection signal="pressed" from="JapinhaFalas/Comidinhas/fundo_branco/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="SofiaFalas/SofiaFalasButton" to="." method="_on_SofiaFalasButton_pressed"]
[connection signal="pressed" from="SofiaFalas/SairCvsaSofiaButton" to="." method="_on_SairCvsaSofiaButton_pressed"]
